fix(client): add align-items to column

--- a/packages/client/assets/style/grid.css
+++ b/packages/client/assets/style/grid.css
@@ -17,6 +17,7 @@
 }
 
 .grid > .column {
+  align-items: var(--base-align);
   display: flex;
   flex: auto;
   flex-direction: column;
